--- a/nx.json
+++ b/nx.json
@@ -7,5 +7,18 @@
     "tslint.json": "*",
     "nx.json": "*"
   },
-  "projects": {}
+  "projects": {
+    "npro-user": {
+      "tags": ["*"]
+    },
+    "npro-user-e2e": {
+      "tags": []
+    },
+    "npro-admin": {
+      "tags": ["*"]
+    },
+    "npro-admin-e2e": {
+      "tags": []
+    }
+  }
 }
